# 808x-midterm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.clangd/index/: klib-forward.hpp.F76D43C49FEA3B34.idx  main.cpp.BA086638D0C99949.idx  main.cpp.C34FBCAC382EAD6C.idx  src.cpp.6BFF7F113095D80A.idx  src.cpp.925FBBC345E2BC01.idx  src.cpp.ACC98F7AA7FD0056.idx  test.cpp.F65DD3E89AAB7A4E.idx
.github/workflows/: run-unit-test-and-upload-codecov.yml
app/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/Forward/: CMakeLists.txt  Forward.hpp  src.cpp
libs/Inverse/: CMakeLists.txt  Inverse.hpp  src.cpp
libs/Manipulator/: CMakeLists.txt  Manipualtor.hpp  Manipulator.hpp  src.cpp
libs/klib-datatypes/: CMakeLists.txt  klib-datatypes.hpp
libs/klib-forward/: CMakeLists.txt  klib-forward.hpp  src.cpp
libs/klib-inverse/: CMakeLists.txt  klib-inverse.hpp  src.cpp
libs/klib-manipulator/: CMakeLists.txt  klib-manipulator.hpp  src.cpp
results/: cppcheck_result.txt  cpplint_result.txt  cpplint_result_forward.txt  cpplint_result_inverse.txt  cpplint_result_manipulator.txt
test/: CMakeLists.txt  forward_test.cpp  inverse_test.cpp  main.cpp  manipulator_test.cpp  test.cpp
